--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -10,6 +10,8 @@ $color-highlight: #f00;
   }
 }
 $color-shadow: rgba(0, 0, 0, 0.25);
+$color-plus: saturate(rgb(131,175,155),40%);
+$color-minus:rgb(254,67,101);
 %outerShadow {
   box-shadow: 0 0 3px $color-shadow;
 }
